@@ -14,6 +14,8 @@ sigsafe-0.1.2
 * Added some additional tests for things that don't appear to be actual
   problems. Good.
 
+* Workarounds for RedHat 9's half-completed epoll.
+
 sigsafe-0.1.1
 -------------
 
